@@ -65,6 +65,7 @@ protected:
 	int failures;			// # failures to find opponent.
 	void start_battle();		// Play music at start of battle.
 	virtual void find_opponents();
+	Actor *find_protected_attacker();// Find attacker of protected member.
 	Actor *find_foe(int mode);	// Find a new opponent.
 	Actor *find_foe();
 	void approach_foe();		// Approach foe.
