@@ -40,6 +40,10 @@ const int first_move_aside = 0x400;	// For guards when blocked.
 const int last_move_aside = 0x402;
 const int first_ouch = 0x429;
 const int last_ouch = 0x42c;
+const int first_need_help = 0x430;
+const int last_need_help = 0x433;
+const int first_will_help = 0x434;
+const int last_will_help = 0x436;
 const int first_to_battle = 0x439;
 const int last_to_battle = 0x43b;
 const int first_flee = 0x448;
