@@ -1,3 +1,8 @@
+2001-05-17  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* combat.cc: Added support for the 'protected' halo button and the
+	'protect' combat mode.
+
 2001-05-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* configure.in: fixed checks for getaddrinfo() and mkstemp()
 
